--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,3 +15,16 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.cp{
+  cursor: pointer;
+}
+.alive{
+  transition: all 0.3s ease-in-out;
+}
+.alive:hover{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.mt3{
+  margin-top: 3rem;
+}
