--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+:root {
+  --primary-color: #343a40;
+}
+
 html,
 body {
   padding: 0;
@@ -5,6 +9,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background-color: #fafafa;
+  color: var(--primary-color);
 }
 
 a {
@@ -16,15 +21,33 @@ a {
   box-sizing: border-box;
 }
 
-.cp{
+.btn {
+  background: transparent;
+  text-transform: capitalize;
+  color: var(--primary-color);
+  border-color: var(--primary-color);
+  box-shadow: none;
+}
+.btn:hover, .btn:focus {
+  background: var(--primary-color);
+  border-color: var(--primary-color);
+  box-shadow: none;
+}
+.cp {
   cursor: pointer;
 }
-.alive{
+.fl{
+  float: left;
+}
+.alive {
   transition: all 0.3s ease-in-out;
 }
-.alive:hover{
+.alive:hover {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-.mt3{
+.mt3 {
   margin-top: 3rem;
+}
+.mr1 {
+  margin-right: 1rem;
 }
